--- a/checkin.css
+++ b/checkin.css
@@ -26,7 +26,7 @@
 }
 
 body{
-	background: #E32526;
+	background: #25C9DB;
 }
 
 h1{
@@ -36,4 +36,11 @@ h1{
 .table table{
     margin-left:auto; 
     margin-right:auto;
+    font-family: "Impact";
+    padding: 5px;
+}
+
+.table button{
+	font-family: "Impact";
+    padding: 5px;
 }
