--- a/checkin.css
+++ b/checkin.css
@@ -1,6 +1,6 @@
 #main{
 	margin: auto;
-	font-family: "Impact";
+	font-family: "Helvetica";
 	text-align: center;
 }
 
@@ -19,7 +19,7 @@
 .submit{
 	height: 40px;
 	width: 200px;
-	font-family: "Impact";
+	font-family: "Helvetica";
 	font-size: 16;
 	background: #8B8C8E;
 	border-color: #ABACAE;
@@ -36,11 +36,15 @@ h1{
 .table table{
     margin-left:auto; 
     margin-right:auto;
-    font-family: "Impact";
-    padding: 5px;
+    font-family: "Helvetica";
+    text-align:center;
 }
 
 .table button{
-	font-family: "Impact";
-    padding: 5px;
-}
+	font-family: "Helvetica";
+	margin:auto;
+	padding:auto;
+	text-align:center;
+	background: #8B8C8E;
+	border-color: #ABACAE;
+  }
