--- a/css/checkin.css
+++ b/css/checkin.css
@@ -39,8 +39,7 @@ h2{
 }
 
 .table table{
-	margin-left:auto; 
-	margin-right:auto;
+	margin: auto;
 	font-family: "Helvetica";
 	text-align:center;
 }
