--- a/css/checkin.css
+++ b/css/checkin.css
@@ -39,7 +39,8 @@ h2{
 }
 
 .table table{
-	margin: auto;
+	margin-left:auto; 
+	margin-right:auto;
 	font-family: "Helvetica";
 	text-align:center;
 }
