makae table editable

--- a/css/manager.css
+++ b/css/manager.css
@@ -99,13 +99,16 @@ body{
 #UpdateEvent {
 	display: none;
 	margin: auto;
-	vertical-align: left;
 }
 
 #UpdateAttendee {
+	 display: none;
+	 margin: auto;
+ }
+
+#UpdateUser {
 	display: none;
 	margin: auto;
-	vertical-align: left;
 }
 
 #header{
