Add thank you email functionality

--- a/css/manager.css
+++ b/css/manager.css
@@ -119,5 +119,15 @@ body{
 	margin-right:10px;
 }
 
+#emailForm{
+	display: none;
+	margin: auto;
+}
+
+#sendEmail{
+	display: none;
+	margin: auto;
+}
+
 
 
